# fuzzy-pdf

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  release.yml  rustdoc.yml
fuzzy_pdf/: all.html  fn.main.html  index.html  sidebar-items.js  struct.CONFIG.html
fuzzy_pdf/action/: enum.Action.html  index.html  sidebar-items.js
fuzzy_pdf/cli/: fn.get_app.html  index.html  sidebar-items.js  static.COMMAND_LONG_ABOUT.html
fuzzy_pdf/config/: index.html  struct.Config.html
fuzzy_pdf/file_iter/: enum.FileIter.html  index.html  sidebar-items.js
fuzzy_pdf/pdf/: enum.ParsingError.html  index.html  sidebar-items.js  struct.PDFContent.html
implementors/core/convert/: trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/lazy_static/: trait.LazyStatic.js
implementors/skim/: trait.SkimItem.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: action.rs  cli.rs  config.rs  file_iter.rs  get_files.rs  main.rs  pdf.rs
src/fuzzy_pdf/: action.rs.html  cli.rs.html  config.rs.html  file_iter.rs.html  main.rs.html  pdf.rs.html
