[package]
name = "fuzzy-pdf"
version = "0.3.2"
authors = ["MarioJim <mario.emilio.j@gmail.com>"]
edition = "2018"
description = "Fuzzy finder for a collection of pdf files"
repository = "https://github.com/MarioJim/fuzzy-pdf"
license = "MIT"

[dependencies]
clap = "3.0.0-beta.2"
grep = "0.2"
lazy_static = "1.4.0"
jwalk = "0.5"
poppler = "0.3"
regex = "1"
skim = "0.9"
termcolor = "1.1.0"
